[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-tools"
description = "Utilities for analyzing MAS-iso-seq data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "h5py",
    "leidenalg",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pynndescent",
    "scipy",
    "sparse",
    "zarr",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pre-commit"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "mas_tools.__version__"}

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = ['.git', '.tox', 'venv']
ignore = ['E203', 'E231', 'E501', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
